# Niru-Predictpath-AI

./: .gitignore  DEBUG-PROMPT.md  FILE-MANAGEMENT.md  README.md  UI_PRESENTATION_README.md  check_db_schema.py  check_parquet.py  fix_paths.py  full_db_check.py  package-lock.json  tools_function.md
Tool1/: .gitignore  README.md  ingestion_summary.json  requirements.txt  run_tool1.py  setup.bat  test_cmd.py  tool1_test_result.txt
Tool1/src/: main.py
Tool2/: .gitignore  README.md  path_report.json
Tool2/src/: domain.py  engine.py  (+3 more)
Tool3/: .gitignore  README.md  trajectory_forecast.json
Tool4/: .gitignore  README.md  response_plan.json
Tool5/: .gitignore  README.md  execution_report.json
Tool6/: .gitignore  README.md  pyproject.toml  status.json
VulnIntel/: .gitignore  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  pyproject.toml
VulnIntel/src/: __init__.py  config.py  main.py
VulnIntel/src/database/: __init__.py  connection.py  schema.py
VulnIntel/src/ingestors/: __init__.py  base.py  cve_ingester.py  cwe_ingester.py  kev_ingester.py
VulnIntel/src/parsers/: __init__.py  cve_parser.py  cwe_parser.py  kev_parser.py
VulnIntel/src/query/: __init__.py  api.py
VulnIntel/src/utils/: __init__.py  downloader.py  logger.py  validators.py
VulnIntel/tests/: __init__.py  test_cve_ingester.py  test_query_api.py
predictpath-ui/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  run-network-scan.ps1  run-nikto.ps1  run-nmap.ps1  run-openvas.ps1  run-wazuh-scan.ps1  run-zap.ps1  wazuh_filter.sh  
tests/: verify_flow.py
(+152 files in other folders)
