[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnintel"
version = "1.0.0"
description = "Vulnerability Intelligence Data Pipeline for PredictPath AI"
requires-python = ">=3.11"
authors = [
    {name = "PredictPath AI Team"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    "schedule>=1.2.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
